--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -60,6 +60,8 @@ else()
     target_compile_options(lua PRIVATE -Wno-unused-parameter -Wno-unused-function)
 endif()
 
+# -------------------------------
+#library dependencies
 # SDL3
 
 # This should be the directory that contains the SDL3 folder (I hope)
@@ -75,7 +77,7 @@ set_target_properties(SDL3::SDL3 PROPERTIES
     INTERFACE_INCLUDE_DIRECTORIES "${SDL3_INCLUDE_DIR};${SDL3_HEADERS_DIR}"
 )
 
-# SDL_ttf (this basicly the same lol)
+# SDL_ttf
 
 # This should be the directory that contains the SDL3 folder (I hope)
 set(SDLTTF_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/include")
@@ -87,9 +89,20 @@ add_library(SDLTTF::SDLTTF SHARED IMPORTED)
 set_target_properties(SDLTTF::SDLTTF PROPERTIES
     IMPORTED_LOCATION "${SDLTTF_LIB_DIR}/SDL3_ttf.dll"
     IMPORTED_IMPLIB "${SDLTTF_LIB_DIR}/SDL3_ttf.lib"
-    INTERFACE_INCLUDE_DIRECTORIES "${SDLTTF_INCLUDE_DIR};$SDLTTF_HEADERS_DIR}"
+    INTERFACE_INCLUDE_DIRECTORIES "${SDLTTF_INCLUDE_DIR};${SDLTTF_HEADERS_DIR}"
 )
 
+# glad
+
+add_library(glad STATIC
+    src/library/glad/src/glad.c
+)
+
+target_include_directories(glad PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/library/glad/include
+)
+
+# -------------------------------
 
 # Engine sources
 
@@ -106,7 +119,7 @@ add_executable(Moonlight ${ENGINE_SOURCES})
 
 # Link dependencies and include directories
 
-target_link_libraries(Moonlight PRIVATE lua SDL3::SDL3)
+target_link_libraries(Moonlight PRIVATE lua SDL3::SDL3 glad SDLTTF::SDLTTF)
 
 # Compiler / linker options
 
